# parallel

./: CMakeLists.txt  test  test.c
input_tasks/: a.out  add_tack.c  omptest  task1  task1.c  task2  task2.c  task3  task3.c
lab/: general.h
lab/2/: lab  lab.c  lab.txt  lab_par.txt  run  run.c  times.txt  times_par.txt
lab/2/measure/: measure.py
lab/3b/: 3b  3b.c  ethalon_dataset_3b.txt  par_dataset_3b.txt  run  run.c
lab/3b/MPI/: 1c  1c.c  1c_par  1c_par.c  ethalon_dataset_1c.txt  general.h  par_dataset_1c.txt  run  run.c
lab/3b/MPI/1c_par.dSYM/Contents/: Info.plist
lab/3b/MPI/1c_par.dSYM/Contents/Resources/DWARF/: 1c_par
lab/3b/MPI/1c_par.dSYM/Contents/Resources/Relocations/aarch64/: 1c_par.yml
lab/3b/MPI/ethalon/: ehtalon_par  ethalon  ethalon.c  ethalon_par  ethalon_par.c
lab/3b/MPI/ethalon/ehtalon_par.dSYM/Contents/: Info.plist
lab/3b/MPI/ethalon/ehtalon_par.dSYM/Contents/Resources/DWARF/: ehtalon_par
lab/3b/MPI/ethalon/ehtalon_par.dSYM/Contents/Resources/Relocations/aarch64/: ehtalon_par.yml
lab/3b/MPI/ethalon/ethalon_par.dSYM/Contents/: Info.plist
lab/3b/MPI/ethalon/ethalon_par.dSYM/Contents/Resources/DWARF/: ethalon_par
lab/3b/MPI/ethalon/ethalon_par.dSYM/Contents/Resources/Relocations/aarch64/: ethalon_par.yml
lab/3b/MPI/measure/: measure.py
lab/3b/OMP/: 3b.c  ethalon_dataset_3b.txt  general.h  par_dataset_3b.txt  run.c
lab/3b/OMP/ethalon/: ethalon  ethalon.c
lab/3b/OMP/measure/: histogram.py
lab/ethalon/: ethalon.c
